Few hotfixes to templates

--- a/SchoolManagmentApp/calendarApp/templates/view_schedule.html
+++ b/SchoolManagmentApp/calendarApp/templates/view_schedule.html
@@ -28,7 +28,7 @@
 					  {{field|add_class:"select-clas-btn-fields"}}
 					  {%endfor%}
 
-					<button type="submit" class="btn text-subject select-clas-btn ">Select</button>
+					<button type="submit" class="btn select-clas-btn select-button">Select</button>
 				</form>
 
 		</div>
