--- a/SchoolManagmentApp/usersApp/templates/password_reset_form.html
+++ b/SchoolManagmentApp/usersApp/templates/password_reset_form.html
@@ -13,7 +13,7 @@
 						<div class="mb-md-5 mt-md-4 pb-5">
 							<h2 class="fw-bold mb-2 text-uppercase">Reset your password</h2>
 							<p class="text-white-50 mb-5">
-								Tell us the username and email address associated with your Reddit account,<br/> and we’ll send you an email with a link to reset your password. 
+								Tell us the username and email address associated with your account,<br/> and we’ll send you an email with a link to reset your password. 
 							</p>
 							<div class="form-outline form-white mb-5">
 								<input
