--- a/SchoolManagmentApp/usersApp/templates/authors.html
+++ b/SchoolManagmentApp/usersApp/templates/authors.html
@@ -54,29 +54,9 @@
 							<span></span>
 						</div>
 						<ul class="nav-list">
-							{% if user.profile.account_type == user.profile.TEACHER %}
-							<li><a href="{% url 'teacher_reports' %}">Your Reports</a></li>
-							<li><a href="{% url 'lesson_delivery_start' %}">Start Lesson</a></li>
-							{% endif %}
 
-							{% if user.profile.account_type == "Teacher" or user.profile.account_type == "Admin" %}
-							<li><a href="{%url 'view_grades_teacher'%}">Grades</a></li>
-							{%else%}
-							<li><a href="{%url 'view_grades'%}">Grades</a></li>
-							{%endif%}
-
-							<li><a href="{%url 'view_schedule'%}">Schedule</a></li>
-							<li><a href="{%url 'events'%}">Events</a></li>
-							<li><a href="{%url 'inbox'%}">Messages</a></li>
-							<li><a href="{% url 'authors' %}">Authors</a></li>
-							<li><a href="{% url 'update_user_profile'%}"><img class='avatar-pic' src="{%if user.profile.photo.url%}
-								{{user.profile.photo.url }}
-								{%else%}
-								{% static 'img/unknown.png' %}
-								{%endif%}" alt=""></a></li>
-							<li class="px-2"><span class="text-white">Welcome <br>{{user.username}}</span></li>
-							<li><a href="{% url 'logout' %}"><button id="login-nav" 
-								class="login-nav-btn" >Logout</button></a></li>
+							<li><a href="{% url 'home' %}"><button id="login-nav" 
+								class="login-nav-btn" >Login</button></a></li>
 						</ul>
 					</nav>
 				</header>
