--- a/SchoolManagmentApp/usersApp/templates/edit_profile.html
+++ b/SchoolManagmentApp/usersApp/templates/edit_profile.html
@@ -44,7 +44,7 @@
                         
                     </form>
                     <div>
-                    <a href="{% url 'passwordChange' %}"><button class= "btn btn-outline-light btn-sm px-3">Change password</button></a>
+                    <a href="{% url 'password_change' %}"><button class= "btn btn-outline-light btn-sm px-3">Change password</button></a>
                     </div>
                 </div>
                 </div>
