--- a/SchoolManagmentApp/usersApp/templates/password_change_form.html
+++ b/SchoolManagmentApp/usersApp/templates/password_change_form.html
@@ -8,7 +8,7 @@
 	<div class="card bg-dark text-white mt-5" style="border-radius: 1rem;">
     <form
         method="post" 
-        action="{% url 'passwordChange' %}"
+        action="{% url 'password_change' %}"
 		class="card-body p-5 text-center"
 		>
 			<div class="mb-md-2 mt-md-4 pb-5">
