base template changes

--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -5,7 +5,7 @@
         <!-- filtering  -->
         {% if kid_id %}
             <div class="d-flex">
-                <div id="filterButton" class="filter-button mx-2">Filtering</div>
+                <div id="filterButton" class="filter-button mx-2 mt-2">Filtering</div>
                 <a href="{% url 'parent_filter_events' %}" class="text-decoration-none">
                     <div id="filterButton2" class="filter-button mx-2">Back</div>
                 </a>
