--- a/SchoolManagmentApp/eventApp/templates/teacher_events.html
+++ b/SchoolManagmentApp/eventApp/templates/teacher_events.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- filtering  -->
-<div id="filterButton" class="filter-button">Filtering</div>
+<div id="filterButton" class="filter-button mt-2">Filtering</div>
 
 <div id="filterWindow" class="filter-window">
     <div class="filter-content ">
