--- a/SchoolManagmentApp/teacherApp/templates/teacher_app.html
+++ b/SchoolManagmentApp/teacherApp/templates/teacher_app.html
@@ -3,7 +3,7 @@
 
 <!-- filtering -->
 <div class="d-flex">
-    <div id="filterButton" class="filter-button mx-2">Filtering</div>
+    <div id="filterButton" class="filter-button mx-2 mt-2">Filtering</div>
 </div>
 
 <div id="filterWindow" class="filter-window ">
