--- a/SchoolManagmentApp/eventApp/templates/events.html
+++ b/SchoolManagmentApp/eventApp/templates/events.html
@@ -7,11 +7,11 @@
             <div class="d-flex">
                 <div id="filterButton" class="filter-button mx-2 mt-2">Filtering</div>
                 <a href="{% url 'parent_filter_events' %}" class="text-decoration-none">
-                    <div id="filterButton2" class="filter-button mx-2">Back</div>
+                    <div id="filterButton2" class="filter-button mx-2 mt-2">Back</div>
                 </a>
             </div>
         {% else %}   
-            <div id="filterButton" class="filter-button">Filtering</div>
+            <div id="filterButton" class="filter-butto mt-2">Filtering</div>
         {% endif %}
 
         <div id="filterWindow" class="filter-window ">
